# pleezer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  build.rs  secrets.toml.example
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: check-beta.yml  check-stable.yml  code-quality.yml  cross-compile.yml  periodic.yml  rust.yml
doc/: getUserData.json
protos/: current_index.proto  queue_list.proto  repeat_mode.proto
src/: arl.rs  audio.rs  audio_file.rs  config.rs  connect.rs  decoder.rs  decrypt.rs  error.rs  events.rs  gateway.rs  http.rs  lib.rs  main.rs  normalize.rs  player.rs  proxy.rs  rand.rs  remote.rs  session.rs  signal.rs  token.rs  tokens.rs  track.rs  util.rs  uuid.rs
src/protocol/: auth.rs  codec.rs  media.rs  mod.rs
src/protocol/connect/: channel.rs  contents.rs  messages.rs  mod.rs  stream.rs
src/protocol/connect/protos/: mod.rs  queue.proto  repeat.proto
src/protocol/gateway/: arl.rs  get_arl.rs  list_data.rs  mod.rs  user_data.rs  user_radio.rs
src/protocol/gateway/list_data/: episodes.rs  livestream.rs  mod.rs  songs.rs
src/protocol/protos/: queue.proto
src/protocol/websocket/: app.rs  connect.rs  mod.rs
tests/fixtures/: README.md  auth.json
tests/fixtures/gateway/: README.md
tests/fixtures/gateway/arl/: README.md  response.json
tests/fixtures/gateway/list_data/: README.md
tests/fixtures/gateway/list_data/requests/: episodes.json  livestream.json
tests/fixtures/gateway/list_data/requests/songs/: deezer.json  uploaded.json
tests/fixtures/gateway/list_data/responses/: episodes.json  livestream.json
tests/fixtures/gateway/list_data/responses/songs/: deezer.json  uploaded.json
tests/fixtures/gateway/user_data/: README.md  family_hifi.json  free.json
tests/fixtures/gateway/user_data/responses/: family.json  free.json
tests/fixtures/gateway/user_radio/: README.md  request.json  response.json
tests/fixtures/media/: README.md  request.json  response.json
