[package]
name = "pleezer"
version = "0.1.0"
authors = ["Roderick van Domburg"]
edition = "2021"
rust-version = "1.82"
description = "Headless Deezer Connect player"
readme = "README.md"
repository = "https://github.com/roderickvd/pleezer/"
license-file = "LICENSE.md"
keywords = ["audio", "deezer", "player"]
categories = ["multimedia::audio"]
exclude = ["secrets.toml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blowfish = "0.9"
cbc = "0.1"
clap = { version = "4.0", features = ["cargo", "derive", "env", "wrap_help"] }
cpal = "0.15"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
flate2 = "1.0"
futures-util = { version = "0.3", default-features = false }
governor = { version = "0.7", default-features = false, features = ["std"] }
http = "1.1"
log = "0.4"
lru_time_cache = "0.11"
machine-uid = "0.5"
md-5 = "0.10"
protobuf = { version = "3.2", features = ["with-bytes"] }
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "cookies",
    "gzip",
    "json",
    "macos-system-configuration",
    "rustls-tls-native-roots",
    "stream",
] }
rodio = { version = "0.19", default-features = false, features = [
    "symphonia-flac",
    "symphonia-mp3",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.8", default-features = false, features = [
    "json",
    "macros",
    "std",
] }
stream-download = { version = "0.11", features = ["reqwest-rustls"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tempfile = "3"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
toml = "0.8"
url = "2.3"
uuid = { version = "1.2", features = ["fast-rng", "serde", "v4", "v5"] }

[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3"
