[package]
name = "pleezer"
version = "0.2.0"
authors = ["Roderick van Domburg"]
description = "Headless Deezer Connect player"
edition = "2021"
rust-version = "1.82"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/roderickvd/pleezer/"
categories = ["multimedia::audio"]
keywords = ["audio", "deezer", "player"]
exclude = ["secrets.toml"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["binary"]
binary = ["dep:clap"]

[dependencies]
base64 = "0.22"
blowfish = "0.9"
cbc = "0.1"
cpal = "0.15"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
flate2 = "1.0"
futures-util = { version = "0.3", default-features = false }
governor = { version = "0.7", default-features = false, features = ["std"] }
http = "1.1"
log = "0.4"
lru_time_cache = "0.11"
machine-uid = "0.5"
md-5 = "0.10"
protobuf = { version = "3.2", features = ["with-bytes"] }
rand = { version = "0.8", features = ["small_rng"] }
regex-lite = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "cookies",
    "gzip",
    "json",
    "rustls-tls-native-roots",
    "stream",
] }
rodio = { version = "0.20", default-features = false, features = [
    "symphonia-flac",
    "symphonia-mp3",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.11", default-features = false, features = [
    "json",
    "macros",
    "std",
] }
shell-escape = "0.1"
stream-download = { version = "0.13", features = ["reqwest-rustls"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
toml = "0.8"
url = "2.3"
uuid = { version = "1.2", features = ["fast-rng", "serde", "v4", "v5"] }
veil = "0.2"

[[bin]]
name = "pleezer"
path = "src/main.rs"
required-features = ["binary"]

[dependencies.clap]
version = "4.0"
features = ["cargo", "derive", "env", "wrap_help"]
optional = true

[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
copyright = "2024, Roderick van Domburg"
depends = "libasound2"
section = "sound"
priority = "optional"
assets = [
    [
        "target/release/pleezer",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/pleezer/README.md",
        "644",
    ],
    [
        "LICENSE.md",
        "usr/share/doc/pleezer/LICENSE.md",
        "644",
    ],
    [
        "secrets.toml.example",
        "usr/share/doc/pleezer/secrets.toml.example",
        "644",
    ],
]
extended-description = """\
A headless streaming player built around the Deezer Connect protocol. \
Enables streaming from Deezer to any Linux system without a graphical interface, \
making it ideal for DIY setups, server-based systems, or custom integrations."""

[package.metadata.docs.rs]
# Disable documentation build on docs.rs
# Remove this section when ready to publish documentation
private = true
